--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "dobby-fe",
   "main": "index.js",
   "scripts": {
+    "dev": "npm-run-all --parallel server start",
     "build": "webpack --config conf/webpack.prod.js",
-    "start": "webpack --config conf/webpack.dev.js && webpack-dev-server --config conf/webpack.dev.js"
+    "server": "npm run build && nodemon server.js",
+    "start": "webpack-dev-server --config conf/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -18,17 +20,23 @@
   },
   "homepage": "https://github.com/project-dobby/dobby-fe#readme",
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.3.3",
+    "@babel/register": "^7.0.0",
+    "@types/express": "^4.16.1",
     "@types/react": "^16.8.5",
     "@types/react-dom": "^16.8.2",
     "@types/react-redux": "^7.0.1",
     "@types/redux": "^3.6.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.10",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
