--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
+    "eslint-config-airbnb": "^17.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.18.10",
