--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "dobby-fe",
   "main": "index.js",
   "scripts": {
+    "lint": "tslint --project tslint.json --fix",
     "dev": "npm-run-all --parallel server start",
     "build": "webpack --config conf/webpack.prod.js",
     "server": "npm run build && nodemon server.js",
@@ -34,11 +35,13 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
-    "eslint": "^5.15.0",
-    "eslint-config-airbnb": "^17.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
+    "tslint": "^5.13.1",
+    "tslint-react": "^3.6.0",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
@@ -49,6 +52,18 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "typescript": "^3.3.3333"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{tsx,ts}": [
+      "git add",
+      "yarn lint"
+    ]
   }
 }
