--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "nodemon": "^1.18.10",
+    "npm-run-all": "^4.1.5",
     "tslint": "^5.13.1",
     "tslint-react": "^3.6.0",
     "webpack": "^4.29.5",
