--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "dobby-fe",
   "main": "index.js",
   "scripts": {
-    "lint": "tslint --project tslint.json --fix",
+    "lint": "eslint src/**/*.tsx --fix",
     "dev": "npm-run-all --parallel server start",
     "build": "webpack --config conf/webpack.prod.js",
     "server": "npm run build && nodemon server.js",
@@ -38,6 +38,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
     "eslint": "^5.16.0",
+    "eslint-plugin-react": "^7.12.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
