--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
+    "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
