--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.3.3333"
   },
   "husky": {
