--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "lint": "eslint src/**/*.tsx --fix",
     "dev": "npm-run-all --parallel server start",
-    "build": "webpack --config conf/webpack.prod.js",
+    "build": "NODE_ENV=prod webpack --config conf/webpack.prod.js",
     "server": "npm run build && nodemon server.js",
-    "start": "webpack-dev-server --config conf/webpack.dev.js"
+    "start": "NODE_ENV=dev webpack-dev-server --config conf/webpack.dev.js"
   },
   "repository": {
     "type": "git",
@@ -36,18 +36,25 @@
     "@types/redux": "^3.6.0",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
+    "autoprefixer": "^9.5.1",
     "axios-mock-adapter": "^1.16.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.2.0",
     "clean-webpack-plugin": "^1.0.1",
+    "css-loader": "^2.1.1",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "^7.12.4",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
+    "mini-css-extract-plugin": "^0.6.0",
+    "node-sass": "^4.12.0",
     "nodemon": "^1.18.10",
     "npm-run-all": "^4.1.5",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.2.1",
@@ -55,13 +62,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "classnames": "^2.2.6",
     "express": "^4.16.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "yarn": "^1.15.2"
   },
   "husky": {
     "hooks": {
