--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,15 @@
     "baseUrl": "./",
     "target": "es6",
     "sourceMap": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "removeComments": true,
+    "allowJs": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "typeRoots": [
       "./node_modules/@types",
-      "./src/global.d.ts"
+      "src/types"
     ],
     "paths": {
       "src/*": [
